LIST OF CHANGES

 - Install all files, including cgi-related, within the install action.
 - Remove instrument utilisation views for web pages.
 - Deprecate 'request approval' instrument status, enable status change
   from either of down statuses directly to 'wash required'.
 - Remove code and tests for deprecated instrument statuses.
 - Composition-enabled LIMs object and reference finder.
 - Subset support added to the rpt key based composition factory.
 - Objects's attributes based composition factory sets only those components
   that are either defined or required. Previously an undef value might
   have been used for a component attribute even if the value did not have
   to be set, i.e. the code was not future compatible with planned removal
   of 'Maybe' qualifies from the tag_index and subset definition.

release 85.4
 - Run/instrument tracking; added full support for HiSeq 4000 and limited support
   for NextSeq and MiniSeq
 - Add HiSeq 4000 to graphical instrument list
 - Limit menu for changing run status, when not analyst, to those on instrument
 - Composition framework - the composition object becomes immutable as long
   as its components are immutable.
     - Functionality for an incremental assembly of a composition moved to 
       a generic composition factory.
     - Empty compositions are not allowed.
     - Composition constructor returns a sorted composition.
     - Public sort function is removed.
 - Composition - find is implemented as a binary search.

release 85.3
 - Add deployment to GitHub Releases
 - In order to have correctly versioned files in a distribution,
     changed the builder base class.
 - Travis conf update to pre-load perl-dnap-utilities from github.
 - Samplesheet daemon:
     fixed logger;
     changed reference repository root so that it can be run on a staging host.
 - Changes to handle a different number of tiles in each lane
 - Increased TAG_INDEX_MAX to 9999 to handle pools with >999 samples

release 85.2